mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__remote_content__tests__block_remote_url_in_css_image_set.snap
---
source: mail/mail-html-transformer/src/tests/remote_content.rs
expression: transformer.to_string()
---
<html><head></head><body><div style="background: image-set(&quot;&quot; 1x)">Hello proton user!</div>
    </body></html>
