mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__remote_content__tests__disable_embedded_elements.snap
---
source: mail/mail-html-transformer/src/tests/remote_content.rs
expression: transformer.to_string()
---
<html><head></head><body><section>
    <svg id="svigi" width="5cm" height="4cm" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
        <image x="0" y="0" height="50px" width="50px" xlink:href="firefox.jpg"></image>
        <image x="0" y="0" height="50px" width="50px" xlink:href="chrome.jpg"></image>
        <image x="0" y="0" height="50px" width="50px" href="svg-href.jpg"></image>
    </svg>
    <div>
        <img border="0" usemap="#fp" src="cats.jpg ">
        <map name="fp">
            <area coords="0,0,800,800" href="proton_exploit.html" shape="rect" target="_blank">
        </map>
    </div>

    <img width="12" height="12" alt="this is an alt" src="mon-image.jpg" srcset="mon-imageHD.jpg 2x">
    <img width="12" height="12" alt="this is an alt" data-src="mon-image.jpg">
    <a href="lol-image.jpg">Alll</a>
    <a href="jeanne-image.jpg">Alll</a>
    <div background="jeanne-image.jpg">Alll</div>
    <div background="jeanne-image2.jpg">Alll</div>
    <p style="font-size:10.0pt;font-family:\\2018Calibri\\2019;color:black">
        Example style that caused regexps to crash
    </p>
</section>

<section>
    <svg id="svigi" width="5cm" height="4cm" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
        <image x="0" y="0" height="50px" width="50px" xlink:href=""></image>
        <image x="0" y="0" height="50px" width="50px" xlink:href=""></image>
        <image x="0" y="0" height="50px" width="50px" href=""></image>
    </svg>
    <div>
        <img border="0" usemap="#fp" src="">
        <map name="fp">
            <area coords="0,0,800,800" href="cid:1234" shape="rect" target="_blank">
        </map>
    </div>

    <img width="12" height="12" alt="this is an alt" src="" srcset="">
    <img width="12" height="12" alt="this is an alt" data-src="">
    <a href="cid:1234">Alll</a>
    <a href="cid:1234">Alll</a>
    <div background="">Alll</div>
    <div background="">Alll</div>
    <p style="font-size:10.0pt;font-family:\\2018Calibri\\2019;color:black">
        Example style that caused regexps to crash
    </p>
    <img id="babase64" src="">
</section>
</body></html>
