mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__remote_content__tests__disable_remote_elements.snap
---
source: mail/mail-html-transformer/src/tests/remote_content.rs
expression: transformer.to_string()
---
<html><head></head><body><section>
    <svg id="svigi" width="5cm" height="4cm" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
        <image x="0" y="0" height="50px" width="50px" xlink:href=""></image>
        <image x="0" y="0" height="50px" width="50px" xlink:href=""></image>
        <image x="0" y="0" height="50px" width="50px" href=""></image>
    </svg>
    <div>
        <img border="0" usemap="#fp" src="">
        <map name="fp">
            <area coords="0,0,800,800" href="proton_exploit.html" shape="rect" target="_blank">
        </map>
    </div>

    <img width="12" height="12" alt="this is an alt" src="" srcset="">
    <img width="12" height="12" alt="this is an alt" data-src="">
    <a href="lol-image.jpg">Alll</a>
    <a href="jeanne-image.jpg">Alll</a>
    <div background="">Alll</div>
    <div background="">Alll</div>
    <p style="font-size:10.0pt;font-family:\\2018Calibri\\2019;color:black">
        Example style that caused regexps to crash
    </p>
</section>

<section>
    <svg id="svigi" width="5cm" height="4cm" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
        <image x="0" y="0" height="50px" width="50px" xlink:href="cid:1234"></image>
        <image x="0" y="0" height="50px" width="50px" xlink:href="cid:1234"></image>
        <image x="0" y="0" height="50px" width="50px" href="cid:1234"></image>
    </svg>
    <div>
        <img border="0" usemap="#fp" src="cid:1234">
        <map name="fp">
            <area coords="0,0,800,800" href="cid:1234" shape="rect" target="_blank">
        </map>
    </div>

    <img width="12" height="12" alt="this is an alt" src="cid:1234" srcset="cid:1234">
    <img width="12" height="12" alt="this is an alt" data-src="cid:1234">
    <a href="cid:1234">Alll</a>
    <a href="cid:1234">Alll</a>
    <div background="cid:1234">Alll</div>
    <div background="cid:1234">Alll</div>
    <p style="font-size:10.0pt;font-family:\\2018Calibri\\2019;color:black">
        Example style that caused regexps to crash
    </p>
    <img id="babase64" src="data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAABoIAAAVSCAYAAAAisOk2AAAMS2lDQ1BJQ0MgUHJv
    ZmlsZQAASImVVwdYU8kWnltSSWiBUKSE3kQp0qWE0CIISBVshCSQUGJMCCJ2FlkF
    1y4ioK7oqoiLrgWQtaKudVHs/aGIysq6WLCh8iYF1tXvvfe9831z758z5/ynZO69
    MwDo1PKk0jxUF4B8SYEsITKUNTEtnUXqAgSgD1AwGozk8eVSdnx8DIAydP+nvLkO">
</section>
</body></html>
